fixed alignment on the title, and tweaked webpack so that the public path would be correct for dev and prod

--- a/src/components/UI/styles.scss
+++ b/src/components/UI/styles.scss
@@ -60,9 +60,11 @@
 		}
 		.title {
 			font-size: 10vh;
+			text-align: center;
 		}
 		.body {
 			font-size: var(--size__font__heading);
+			text-align: center;
 		}
 		.replay {
 			padding: 0.62em 1em;
